Add necessary code for header
Add the boilerplate for the header and style it to look like Youness's figma design.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,34 @@
   </head>
   <body>
     <header>
-      <h>Catsucci</h>
+      <h1 class="header logo">FatCat</h1>
+      <ul class="navbar">
+        <a href="#"><li>Miaw1</li></a>
+        <a href="#"><li>Miaw2</li></a>
+        <a href="#"><li>Miaw3</li></a>
+        <a href="#"><li>Miaw4</li></a>
+      </ul>
     </header>
+
+    <section class="header section">
+      <div class="main header">
+        <h2>Meet new and interesting Cats nearby.</h2>
+        <p>
+          Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
+          cillum sint consectetur cupidatat.
+        </p>
+
+        <div class="button-container">
+          <button type="button">How does it work?</button>
+          <button type="button">Get started</button>
+        </div>
+      </div>
+
+      <img
+        src="./icons/undraw_cat.svg"
+        alt="A beatufiul black cat"
+        height="225"
+      />
+    </section>
   </body>
 </html>
