Add body and footer sections

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
     </header>
 
-    <section class="header section">
+    <div class="header section">
       <div class="main header">
         <h2>Meet new and interesting Cats nearby.</h2>
         <p>
@@ -35,6 +35,114 @@
         alt="A beatufiul black cat"
         height="225"
       />
-    </section>
+    </div>
+
+    <div class="body">
+      <!-- pricing -->
+      <div class="features">
+        <h2>Discover Our Features</h2>
+
+        <div class="cards-container">
+          <div class="card">
+            <div class="icon-container"></div>
+
+            <h3>Feature</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+              sint.
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-container"></div>
+
+            <h3>Feature</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+              sint.
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-container"></div>
+
+            <h3>Feature</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+              sint.
+            </p>
+          </div>
+          <div class="card">
+            <div class="icon-container"></div>
+
+            <h3>Feature</h3>
+
+            <p>
+              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+              sint.
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <hr />
+
+      <!-- pricing -->
+      <div class="pricing">
+        <div>
+          <h2>Pricing</h2>
+          <p>
+            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
+          </p>
+        </div>
+        <div class="cards-container">
+          <div class="card"></div>
+          <div class="card"></div>
+          <div class="card"></div>
+        </div>
+      </div>
+    </div>
+    <footer>
+      <div>
+        <img
+          class="FatCat-logo"
+          src="./icons/cat-head.svg"
+          alt="The company's logo wich is a black cat's head"
+        />
+        <p>&COPY; 2023 FatCat, all rights reserved.</p>
+      </div>
+
+      <div class="links-container">
+        <ul class="icon-container">
+          <a href="#"
+            ><li><img class="icon" src="./icons/x.svg" alt="x's logo" /></li
+          ></a>
+          <a href="#"
+            ><li>
+              <img
+                class="icon"
+                src="./icons/instagramic.svg"
+                alt="instagram's logo"
+              /></li
+          ></a>
+          <a href="#"
+            ><li>
+              <img
+                class="icon"
+                src="./icons/github-icon.svg"
+                alt="github's logo"
+              /></li
+          ></a>
+        </ul>
+
+        <ul>
+          <a href="#"><li>Contact</li></a>
+          <a href="#"><li>About us</li></a>
+          <a href="#"><li>FAQ's</li></a>
+          <a href="#"><li>Support</li></a>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
