Fix class naming for css styling

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </div>
 
       <div class="links-container">
-        <ul class="icon-container">
+        <ul class="icons-container">
           <a href="#"
             ><li><img class="icon" src="./icons/x.svg" alt="x's logo" /></li
           ></a>
