--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1 class="header logo">FatCat</h1>
+      <h1 class="header logo">Yassine</h1>
       <ul class="navbar">
         <a href="#"><li>Miaw1</li></a>
         <a href="#"><li>Miaw2</li></a>
