Fix some syntax errors in HTML file

--- a/index.html
+++ b/index.html
@@ -1,148 +1,153 @@
 <!doctype html>
 <html>
-  <head lang="en">
+
+<head lang="en">
     <meta charset="UTF-8" />
     <title>Catsucci's landing page</title>
     <link rel="stylesheet" type="text/css" href="./style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <h1 class="header logo">FatCat</h1>
-      <ul class="navbar">
-        <a href="#"><li>Miaw1</li></a>
-        <a href="#"><li>Miaw2</li></a>
-        <a href="#"><li>Miaw3</li></a>
-        <a href="#"><li>Miaw4</li></a>
-      </ul>
+        <h1 class="header logo">FatCat</h1>
+        <ul class="navbar">
+            <a href="#">
+                <li>Miaw1</li>
+            </a>
+            <a href="#">
+                <li>Miaw2</li>
+            </a>
+            <a href="#">
+                <li>Miaw3</li>
+            </a>
+            <a href="#">
+                <li>Miaw4</li>
+            </a>
+        </ul>
     </header>
 
     <div class="header section">
-      <div class="main header">
-        <h2>Meet new and interesting Cats nearby.</h2>
-        <p>
-          Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
-          cillum sint consectetur cupidatat.
-        </p>
+        <div class="main header">
+            <h2>Meet new and interesting Cats nearby.</h2>
+            <p>
+                Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint
+                cillum sint consectetur cupidatat.
+            </p>
 
-        <div class="button-container">
-          <button type="button">How does it work?</button>
-          <button type="button">Get started</button>
+            <div class="button-container">
+                <button type="button">How does it work?</button>
+                <button type="button">Get started</button>
+            </div>
         </div>
-      </div>
 
-      <img
-        src="./icons/undraw_cat.svg"
-        alt="A beatufiul black cat"
-        height="225"
-      />
+        <img src="./icons/undraw_cat.svg" alt="A beautiful black cat" height="225" />
     </div>
 
     <div class="body">
-      <!-- pricing -->
-      <div class="features">
-        <h2>Discover Our Features</h2>
+        <!-- pricing -->
+        <div class="features">
+            <h2>Discover Our Features</h2>
 
-        <div class="cards-container">
-          <div class="card">
-            <div class="icon-container"></div>
+            <div class="cards-container">
+                <div class="card">
+                    <div class="icon-container"></div>
 
-            <h3>Feature</h3>
+                    <h3>Feature</h3>
 
-            <p>
-              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
-              sint.
-            </p>
-          </div>
-          <div class="card">
-            <div class="icon-container"></div>
+                    <p>
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint.
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="icon-container"></div>
 
-            <h3>Feature</h3>
+                    <h3>Feature</h3>
 
-            <p>
-              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
-              sint.
-            </p>
-          </div>
-          <div class="card">
-            <div class="icon-container"></div>
+                    <p>
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint.
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="icon-container"></div>
 
-            <h3>Feature</h3>
+                    <h3>Feature</h3>
 
-            <p>
-              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
-              sint.
-            </p>
-          </div>
-          <div class="card">
-            <div class="icon-container"></div>
+                    <p>
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint.
+                    </p>
+                </div>
+                <div class="card">
+                    <div class="icon-container"></div>
 
-            <h3>Feature</h3>
+                    <h3>Feature</h3>
 
-            <p>
-              Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
-              sint.
-            </p>
-          </div>
+                    <p>
+                        Lorem ipsum dolor sit amet, qui minim labore adipisicing minim
+                        sint.
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
 
-      <hr />
+        <hr />
 
-      <!-- pricing -->
-      <div class="pricing">
-        <div>
-          <h2>Pricing</h2>
-          <p>
-            Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
-          </p>
+        <!-- pricing -->
+        <div class="pricing">
+            <div>
+                <h2>Pricing</h2>
+                <p>
+                    Lorem ipsum dolor sit amet, qui minim labore adipisicing minim sint.
+                </p>
+            </div>
+            <div class="cards-container">
+                <div class="card"></div>
+                <div class="card"></div>
+                <div class="card"></div>
+            </div>
         </div>
-        <div class="cards-container">
-          <div class="card"></div>
-          <div class="card"></div>
-          <div class="card"></div>
-        </div>
-      </div>
     </div>
     <footer>
-      <div>
-        <img
-          class="FatCat-logo"
-          src="./icons/cat-head.svg"
-          alt="The company's logo wich is a black cat's head"
-        />
-        <p>&COPY; 2023 FatCat, all rights reserved.</p>
-      </div>
+        <div>
+            <img class="FatCat-logo" src="./icons/cat-head.svg" alt="The company's logo which is a black cat's head" />
+            <p>&COPY; 2023 FatCat, all rights reserved.</p>
+        </div>
 
-      <div class="links-container">
-        <ul class="icons-container">
-          <a href="#"
-            ><li><img class="icon" src="./icons/x.svg" alt="x's logo" /></li
-          ></a>
-          <a href="#"
-            ><li>
-              <img
-                class="icon"
-                src="./icons/instagramic.svg"
-                alt="instagram's logo"
-              /></li
-          ></a>
-          <a href="#"
-            ><li>
-              <img
-                class="icon"
-                src="./icons/github-icon.svg"
-                alt="github's logo"
-              /></li
-          ></a>
-        </ul>
+        <div class="links-container">
+            <ul class="icons-container">
+                <a href="#">
+                    <li><img class="icon" src="./icons/x.svg" alt="x's logo" /></li>
+                </a>
+                <a href="#">
+                    <li>
+                        <img class="icon" src="./icons/instagramic.svg" alt="Instagram's logo" />
+                    </li>
+                </a>
+                <a href="#">
+                    <li>
+                        <img class="icon" src="./icons/github-icon.svg" alt="Github's logo" />
+                    </li>
+                </a>
+            </ul>
 
-        <ul>
-          <a href="#"><li>Contact</li></a>
-          <a href="#"><li>About us</li></a>
-          <a href="#"><li>FAQ's</li></a>
-          <a href="#"><li>Support</li></a>
-        </ul>
-      </div>
+            <ul>
+                <a href="#">
+                    <li>Contact</li>
+                </a>
+                <a href="#">
+                    <li>About us</li>
+                </a>
+                <a href="#">
+                    <li>FAQ's</li>
+                </a>
+                <a href="#">
+                    <li>Support</li>
+                </a>
+            </ul>
+        </div>
     </footer>
-  </body>
+</body>
+
 </html>
